# clible2

./: main.py  pyproject.toml
clible/app/: api_client.py
clible/tests/: test_api_client.py
